version 20070616_1
Added caching to the links out of a page.  It stores all *possible*
links out of a page so that if a link is incipient, and subsequently
a page is created which makes it real, it does not need to track
backwards to tell the linking page that it's now a real link.
Added a large number of tests and added sections of subroutines
with the preface sect: for easier searchability.
Also, added a more informative "throw" when in testing mode.

version 20070615_2
Updated the links search page to allow for sorting based on
different criteria, such as modified time, so it acts like a recent
changes page.

version 20070615_2
Made the search case-insensitive

version 20070615_1
Added the ability to do a very simple search all your linked pages.

version 20070614_4
Added much more sophistication to the link tree creation.

version 20070614_3
You can now encrypt and decrypt multiple line pages.

version 20070614_2
Made a small post-decryption addition to the Blowfish code to strip
the block cipher padding.

version 20070614_1
Fixed an Internet Explorer bug where it can't handle XHTML formatted script
elements.  Since that's fixed, I re-added the keyboard shortcuts, but
changed the key to w, since f was a bad key (it's used in the CTRL-f
for "find" key combo).

version 20070613_2
Moved potoss development to Google Code.

version 20070613_1
Temporarily removed the js shortcuts becaused they caused all content to
disappear in IE.  Whoops!!!  Added IE back into the selenium tests so
we'll catch that issue if it pops up again.

version 20070611_1
Added the PH_page_links URL, which shows all the links which originate
and propogate from a page.

version 20070610_3
Added configurable sex (just a simple he/she) for the administrator.

version 20070610_2
Moved the get_or_put.pl file to "utils".  Added a link to take you to
the latest, HEAD, revision of a page, like if you come in from an RSS feed
which is pointing to an earlier revision.