@@ -15,8 +15,9 @@ use warnings;
 # This is done automatically with the "plan" function call below.
 use Test::More;
 use Test::WWW::Selenium;
+use Time::HiRes qw( usleep ); #a more high resolution sleep timer
 
-my $NUM_TESTS_PER_BROWSER = 113;
+my $NUM_TESTS_PER_BROWSER = 119;
 my $SELENIUM_SERVER_DIR =
     qq~"C:\\Program Files\\selenium-remote-control-0.9.1_nightly\\server"~;
 
@@ -71,64 +72,64 @@ for my $browser (@browsers_to_test) {
 
 
     $sel->open_ok("${dir}potoss_saved_test");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("edit this page");
     $sel->is_text_present_ok("this is change 11");
 
 
 
     $sel->click_ok("link=advanced options");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=show the page's revision history");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=compare two revisions");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=start at revision 9");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=end at revision 10");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("this is change 10");
 
 
 
     $sel->open_ok("${dir}potoss_wow"); #read only alias for potoss_saved_test
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("read only");
     $sel->is_text_present_ok("this is change 11");
 
     $sel->open_ok("${dir}PH_edit&nm_page=potoss_wow");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("You can't edit this page");
 
     $sel->open_ok("${dir}PH_page_opts&nm_page=potoss_wow");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("You can't view this page's options");
 
     $sel->open_ok("${dir}potoss_tmp_test");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This page doesn't exist");
     $sel->click_ok("link=create it as a new page");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("id=myel_new_page");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("edit this page");
     $sel->click_ok("link=edit this page");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This message only appears the first time you edit a page");
     $sel->type_ok("myel_text_area", "This is some text.");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This is some text");
     $sel->click_ok("link=edit this page");
-    loads_ok();
+    my_loads_ok();
     $sel->type_ok("myel_text_area", "This is some text.\nThis is even more text.");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This is even more text");
     $sel->click_ok("link=advanced options");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=show the page's revision history");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("view revision 2");
 
     `cd $texts_dir ; rm -r potoss_tmp_test_REVS ; rm potoss_tmp_test*`;
@@ -139,23 +140,23 @@ for my $browser (@browsers_to_test) {
     # to look at the revisions.
 
     $sel->open_ok("${dir}potoss_tmp_test");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This page doesn't exist");
     $sel->click_ok("link=create it as a new page");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("id=myel_new_page");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("edit this page");
     $sel->click_ok("link=edit this page");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("This message only appears the first time you edit a page");
     $sel->type_ok("myel_text_area", "This is some text.");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=advanced options");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=show the page's revision history");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("There is currently only one revision");
 
     `cd $texts_dir ; rm -r potoss_tmp_test_REVS ; rm potoss_tmp_test*`;
@@ -167,7 +168,7 @@ for my $browser (@browsers_to_test) {
     $sel->is_text_present_ok("like the page name");
     $sel->type_ok("myel_page_name", "queen");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("is in the dictionary");
 
     #-------------------------------------------------------------------------
@@ -177,7 +178,7 @@ for my $browser (@browsers_to_test) {
     $sel->is_text_present_ok("like the page name");
     $sel->type_ok("myel_page_name", "potoss_saved_test");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("that one already exists");
 
     #-------------------------------------------------------------------------
@@ -188,7 +189,7 @@ for my $browser (@browsers_to_test) {
     $sel->is_text_present_ok("like the page name");
     $sel->type_ok("myel_page_name", "My dog is always hungry!");
     $sel->click_ok("nm_submit");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("changed the page name to");
     $sel->is_text_present_ok("my_dog_is_always_hungry");
 
@@ -200,26 +201,33 @@ for my $browser (@browsers_to_test) {
     $sel->is_text_present_ok("Here is some unencrypted content.");
     $sel->is_text_present_ok("Less than < and greater than > and ampersand & and question mark ?");
     $sel->click_ok("link=advanced options");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=very advanced");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=show the encryption buttons");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=go back to the page");
-    loads_ok();
+    my_loads_ok();
     $sel->is_text_present_ok("Here is some unencrypted content.");
+    $sel->click_ok("myel_edit_link");
+    my_loads_ok();
+    ok($sel->get_value("myel_text_area") =~ /^Here is some unencrypted content/);
+    ok($sel->get_value("myel_text_area") =~ /Less than < and greater than > and ampersand & and question mark \?/);
     $sel->type_ok("myel_blowfish_key", "asimplekey");
     $sel->click_ok("link=encrypt");
-    $sel->is_text_present_ok("34B6A58B7C40BE0C53ABF49FD68F22570A6F");
+    ok($sel->get_value("myel_text_area") =~ /^4BE6B52958CAF3FA48780A3D72959F9DC87/);
     $sel->click_ok("link=decrypt");
-    $sel->is_text_present_ok("Here is some unencrypted content.");
-    $sel->is_text_present_ok("Less than < and greater than > and ampersand & and question mark ?");
+    ok($sel->get_value("myel_text_area") =~ /^Here is some unencrypted content/);
+    ok($sel->get_value("myel_text_area") =~ /Less than < and greater than > and ampersand & and question mark \?/);
+    #go back to the main page
+    $sel->click_ok("//input[\@value='cancel']");
+    my_wait_until_text_present_ok("advanced options", 1);
     $sel->click_ok("link=advanced options");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=very advanced");
-    loads_ok();
+    my_loads_ok();
     $sel->click_ok("link=hide the encryption buttons");
-    loads_ok();
+    my_loads_ok();
 
     #-------------------------------------------------------------------------
     # Story:
@@ -236,8 +244,30 @@ for my $browser (@browsers_to_test) {
 # shutDown command is shown in the Selenium Remote Control documentation.
 $sel && $sel->do_command("shutDown");
 
-sub loads_ok {
+sub my_loads_ok {
     # this is called so often that it should be a subroutine
     # with a cleaner name and a variable you can change in one place.
     $sel->wait_for_page_to_load_ok('30000', 'page loads in less than 30000');
+}
+
+sub my_wait_until_text_present_ok {
+    my $text = shift;
+    my $num_seconds = shift
+        || die "need the number of seconds to wait";
+    my $message = shift;
+    
+    for my $try_num (0..$num_seconds) {
+
+        if ($sel->is_text_present($text)) {
+            ok(1, $message);
+            return 1;
+        }
+
+        if ($try_num > $num_seconds) {
+            ok(0, $message);
+            return 0;
+        }
+
+        sleep(1);
+    }
 }
